correction textes alt img trop longs, ajout attribut autocomplete formulaire, correction contraste insuffisant css

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ img{
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #807832;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
